cross-fade() rendering doesn't match expectation https://bugs.webkit.org/show_bug.cgi?id=157665 rdar://problem/17917708

Reviewed by Dean Jackson.

Source/WebCore:

Cross-fading two opaque images would result in a non-opaque result in between the endpoints,
probably because r157045 caused both images to be drawn with srcOver, since drawImage()
clobbers the composite operation in the context.

Fix by passing the composite operation to the drawImage() calls for the non-transparency layer
code path.

Converted css3/images/cross-fade-blending.html into a ref test to test this.

* platform/graphics/CrossfadeGeneratedImage.cpp:
(WebCore::drawCrossfadeSubimage):

LayoutTests:

Make css3/images/cross-fade-blending.html a ref test.

* css3/images/cross-fade-blending-expected.html: Added.
* css3/images/cross-fade-blending-expected.png: Removed.
* css3/images/cross-fade-blending-expected.txt: Removed.
* css3/images/cross-fade-blending.html:
* platform/mac/css3/images/cross-fade-blending-expected.png: Removed.

Canonical link: https://commits.webkit.org/175818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200889 268f45cc-cd09-0410-ab3c-d52691b4dbfc